# BitXDR

./: CMakeLists.txt  InputItems.cpp  InputItems.h  Output.cpp  Output.h  PathGraph.cpp  PathGraph.h  constants.h  input.json  input2.json  json.hpp  main.cpp
JsonEntities/: Alert.cpp  Alert.h  PC.cpp  PC.h  Transition.cpp  Transition.h  User.cpp  User.h
